--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/praves77/cordova-plugin-android-idfa.git"
   },
   "dependencies": {
-    "cordova-plugin-googleplayservices": "19.0.3"
+    "com.google.playservices": "*"
   },
   "keywords": [
     "cordova",
